--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,14 @@
 <div class='container px-5 px-sm-0'>
+        <div class ="alert">
+    <% if @book.errors.any? %>
+      <h2><%= @book.errors.count %>errors prohibited this obj being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
