--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,8 +21,9 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
             <% end %>
-            
+
             <td>
+              <!--ログインしているユーザーがいいねを押した状態だと白、まだ押してないと黒。-->
               <% if @book.favorited_by?(current_user) %>
               <p>
                 <%= link_to book_favorites_path(@book), method: :delete do %>
@@ -37,9 +38,40 @@
               </p>
               <% end %>
             </td>
-            
+            <td> <p><%= "コメント数:#{@book.book_comments.count}"%></p></td>
         </tr>
       </table>
+
+      <table>
+        <!--<p>コメント数：<%#= @book_comments.count %></p>-->
+        <% @book.book_comments.each do |book_comment| %>
+        <tr>
+          <td>
+          <p><%= image_tag book_comment.user.get_profile_image %></p>
+          <%= link_to book_comment.user.name,user_path(book_comment.user_id) %>
+          </td>
+          <!--book_commentのuserの名前-->
+          <!--user.name(modelのuserでnameはuserテーブルのカラム-->
+          <td><%= book_comment.comment %></td>
+          <!--book_commentのcomment-->
+
+          <td>
+          <% if book_comment.user == current_user %>
+          <%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), method: :delete,class: "btn btn-sm btn-danger"%>
+          <!--パスの後にidつけつかつけないかはrails routesのurlの後に:idがついているかどうか-->
+          <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </table>
+
+      <div>
+        <%= form_with model: [@book, @book_comment], local: true do |f| %>
+          <%= f.text_area :comment,class: "form-control" %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 </div>
