--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,4 +54,11 @@
       </div>
     </div>
   </nav>
+  <div class ="container">
+    <div class ="row">
+      <div class ="col mt-1 d-flex justify-content-center align-items-center">
+          <%= render 'layouts/search' %>
+      </div>
+    </div>
+  </div>
 </header>
