--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,7 @@
   <div class ="container">
     <div class ="row">
       <div class ="col mt-1 d-flex justify-content-center align-items-center">
-          <%= render 'layouts/search' %>
+          <%= render 'searches/search' %>
       </div>
     </div>
   </div>
