--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <div class="search_form">
-    <%= form_with url: search_path, local: true do |f| %>
+    <%= form_with url: search_path, local: true,method: :get do |f| %>
     <!--search/controllerのsearchアクションへ-->
       <%= f.text_field :word %>
       <!--検索内容を、wordとしてアクションに送っています。-->
