--- a/app/views/searches/search_result.html.erb
+++ b/app/views/searches/search_result.html.erb
@@ -1,21 +1,36 @@
-<h2>Results index</h2>
+<h3><%= @range %> search for "<%= @word %>"</h3>
 
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがUserの時 -->
   <% if @range == "User" %>
-    <tbody>
       <% @users.each do |user| %>
+      <thead>
         <tr>
-          <td><%= user.name %></td>
+          <th>Image</th>
+          <th>Name</th>
         </tr>
-      <% end %>
-    </tbody>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
+          <td><%= link_to user.name,user_path(user) %></td>
+        </tr>
+  <% end %>
+      </tbody>
   <% else %>
     <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
+    <thead>
+        <tr>
+          <th>Image</th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>
+      </thead>
     <tbody>
       <% @books.each do |book| %>
         <tr>
-          <td><%= book.title %></td>
+          <td><%= image_tag book.user.get_profile_image, size:'50x50' %></td>
+          <td><%= link_to book.title,book_path(book) %></td>
           <td><%= book.body %></td>
         </tr>
       <% end %>
