--- a/app/views/searches/search_result.html.erb
+++ b/app/views/searches/search_result.html.erb
@@ -1,3 +1,5 @@
+<p>search_result.html.erb</p>
+
 <h3><%= @range %> search for "<%= @word %>"</h3>
 
 <table class="table table-hover table-inverse">
