--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favorite_buttons_<%= books.id %>').html("<%= j(render "favorites/favorite", book: books) %>");
+$('.favorite_'+<%= @book.id %>).html("<%= j(render "favorites/favorite", book: @book) %>");
