--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,10 +22,8 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
             <% end %>
 
-            <td>
-              <div class= <%= 'favorite_'+ @book.id.to_s %> >
+            <td class= <%= 'favorite_'+ @book.id.to_s %> >
                 <%= render 'favorites/favorite', book: @book %>
-              </div>
             </td>
 
             <td> <p><%= "コメント数:#{@book.book_comments.count}"%></p></td>
