--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,15 @@
 <% if book.favorited_by?(current_user) %>
 <p>
+   <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
   <%= link_to book_favorites_path(book), method: :delete,remote:true do %>
-    ♥<%= book.favorites.count %>
+    <%= book.favorites.count %>
   <% end %>
 </p>
 <% else %>
 <p>
+  <i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
   <%= link_to book_favorites_path(book), method: :post,remote:true do %>
-    ♡<%= book.favorites.count %>
+    <%= book.favorites.count %>
   <% end %>
 </p>
 <% end %>
