--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -31,7 +31,7 @@
               <% end %>
             </table>
 
-            <%= form_with model: @chat, remote: true do |f| %>
+            <%= form_with model: @chat, url: '/chats',local: false,remote: true, method: :post do |f| %>
               <%= f.text_field :message %>
               <%= f.hidden_field :room_id %>
               <%= f.submit "SEND", class: "btn btn-sm btn-success chat-btn" %>
