--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,7 +27,8 @@
                 <%= render 'favorites/favorite', book: @book %>
             </td>
 
-            <td> <p><%= "コメント数:#{@book.book_comments.count}"%></p></td>
+            <td><%= "コメント数:#{@book.book_comments.count}"%></td>
+            <td><%= "閲覧数:#{@book.book_comments.count}"%></td>
         </tr>
       </table>
 <!--追記-->
