--- a/app/views/book_comments/_book_comments_form.html.erb
+++ b/app/views/book_comments/_book_comments_form.html.erb
@@ -1,5 +1,5 @@
 <!--tuiki local: false-->
 <%= form_with model: [book, book_comment], local: false do |f| %>
   <%= f.text_area :comment,class: "form-control" %>
-  <%= f.submit "送信" %>
+  <%= f.submit "送信",class: "mt-1" %>
 <% end %>
