--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,6 +1,6 @@
 <p>_index.html.erb</p>
 
-<table class='table table-hover table-inverse'>
+<table class='table table-hover table-inverse text-center'>
   <thead>
     <tr>
 
@@ -9,7 +9,7 @@
       <th>Opinion</th>
       <th></th>
       <th></th>
-      <th colspan="5"></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -39,8 +39,9 @@
           </div>
         </td>
 
-        <td><p><%= "コメント数:#{book.book_comments.count}"%></p></td>
+        <td><%= "コメント数:#{book.book_comments.count}"%></td>
         <!--book(eachのbook).book_comments(book_commentsテーブルに保存されてるコメントの意味)-->
+        <td><%= "閲覧数:#{book.book_comments.count}"%></td>
       </tr>
     <% end %>
   </tbody>
