--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -41,7 +41,7 @@
 
         <td><%= "コメント数:#{book.book_comments.count}"%></td>
         <!--book(eachのbook).book_comments(book_commentsテーブルに保存されてるコメントの意味)-->
-        <td><%= "閲覧数:#{book.book_comments.count}"%></td>
+        <td><%= "閲覧数:#{book.impressionist_count}"%></td>
       </tr>
     <% end %>
   </tbody>
