--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,7 @@
             </td>
 
             <td><%= "コメント数:#{@book.book_comments.count}"%></td>
-            <td><%= "閲覧数:#{@book.book_comments.count}"%></td>
+            <td><%= "閲覧数:#{@book.impressionist_count}"%></td>
         </tr>
       </table>
 <!--追記-->
