--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,5 +1,5 @@
 <h4>検索結果</h4>
-  <table class='table table-bordered'>
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th>投稿数</th>
