--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -110,18 +110,16 @@
         </script>
       </div>
 
-      <div>
-      <%= form_with url: user_search_path(@user), local: true, method: :get do |f| %>
+      <%= form_with url: user_search_path(@user), method: :get, remote:true,local:false do |f| %>
         <%= f.date_field :created_at %>
-        <%= f.submit '検索', class: 'btn btn-primary'  %>
+        <%= f.submit "検索", class:"btn btn-primary btn-sm" %>
       <% end %>
-
       <div id="search_result">
         <% if @search_book.present? %>
-          <%= render 'users/search', search_book: @search_book %>
+          <%= render "users/search", search_book: @search_book %>
         <% end %>
       </div>
-      </div>
+
     </div>
   </div>
 </div>
