--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,4 +1,5 @@
 <p>users/_index.html.erb</p>
+<div><%=link_to "グループを作成する",new_group_path %> | <%=link_to "グループ一覧",groups_path %></div>
 <table class='table'>
   <thead>
     <tr>
@@ -14,7 +15,7 @@
         <td><%= user.name %></td>
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
-        
+
         <td>
           <% if current_user.following?(user) %>
             <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
@@ -22,7 +23,7 @@
             <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
           <% end %>
         </td>
-        
+
         <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
