--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -83,6 +83,7 @@
         </tbody>
       </table>
 
+      <!--グラフ-->
       <div style= "width:765px; height:500px;">
       <script src ="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
       <canvas id="myChart"></canvas>
@@ -110,6 +111,7 @@
         </script>
       </div>
 
+      <!--投稿検索機能-->
       <%= form_with url: user_search_path(@user), method: :get, remote:true,local:false do |f| %>
         <%= f.date_field :created_at %>
         <%= f.submit "検索", class:"btn btn-primary btn-sm" %>
