--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -112,7 +112,7 @@
       </div>
 
       <!--投稿検索機能-->
-      <%= form_with url: user_search_path(@user), method: :get, remote:true,local:false do |f| %>
+      <%= form_with url: users_search_path(@user), method: :get, remote:true, local:false do |f| %>
         <%= f.date_field :created_at %>
         <%= f.submit "検索", class:"btn btn-primary btn-sm" %>
       <% end %>
