--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,6 +27,24 @@
                 <%= render 'favorites/favorite', book: @book %>
             </td>
 
+
+            <td>
+              <div id="rate<%= @book.id %>"></div>
+              <script>
+                $('#rate<%= @book.id%>').raty({
+                  size     : 36,
+                  starOff:  '<%= asset_path('star-off.png') %>',
+                  starOn : '<%= asset_path('star-on.png') %>',
+                  starHalf: '<%= asset_path('star-half.png') %>',
+                  scoreName: 'book[rate]',
+                  half: true,
+                  readOnly: true,
+                  score: <%= @book.rate %>,
+                });
+              </script>
+            </td>
+
+
             <td><%= "コメント数:#{@book.book_comments.count}"%></td>
             <td><%= "閲覧数:#{@book.impressionist_count}"%></td>
         </tr>
